--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "babel-preset-env": "^1.6.1",
     "cross-env": "^5.1.3",
     "eslint": "^3.18.0",
+    "eslint-config-airbnb": "^11.1.0",
     "eslint-config-standard": "^7.1.0",
     "eslint-friendly-formatter": "^2.0.7",
     "eslint-plugin-html": "^2.0.1",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.0.1",
-    "eslint-config-airbnb": "^11.1.0",
     "redux-logger": "^3.0.6",
     "wepy-compiler-babel": "^1.5.1",
     "wepy-compiler-less": "^1.3.10",
