feat: clear component and change structor

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-promise": "^0.5.3",
+    "redux-logger": "^3.0.6",
+    "weappx": "^2.0.0",
     "wepy": "^1.6.0",
     "wepy-async-function": "^1.4.4",
     "wepy-com-toast": "^1.0.2",
@@ -43,7 +45,6 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.0.1",
-    "redux-logger": "^3.0.6",
     "wepy-compiler-babel": "^1.5.1",
     "wepy-compiler-less": "^1.3.10",
     "wepy-compiler-sass": "^1.3.12",
