--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "ChangerHe <244737162@qq.com>",
   "license": "MIT",
   "dependencies": {
+    "moment": "^2.22.2",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-logger": "^3.0.6",
