--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/app.js",
   "scripts": {
     "dev": "npm run clean & cross-env NODE_ENV=development wepy build --watch",
-    "build": "cross-env NODE_ENV=production wepy build --no-cache",
+    "build": "npm run clean_build & cross-env NODE_ENV=production wepy build --no-cache",
     "dev:web": "wepy build --output web",
     "clean": "find ./dist -maxdepth 1 -not -name 'project.config.json' -not -name 'dist' | xargs rm -rf",
     "clean_build": "find ./dist_release -maxdepth 1 -not -name 'project.config.json' -not -name 'dist' | xargs rm -rf",
